--- a/css/1.css
+++ b/css/1.css
@@ -1,7 +1,29 @@
 body {
     height: 5000px;
 }
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 16px;
+    background-color: #F5F5F5;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: rgba(255, 126, 203,0.1);
+}
+
+/*定义滑块 内阴影+圆角*/
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+    background-color: rgba(252, 165, 216,1);
+}
 #box {
     position: fixed;
     right: 10px;
